--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "component.request.secure",
+  "name": "component.request.unsecure",
   "version": "1.0.0",
   "description": "module for sending secured requests over a network",
-  "main": "component.request.secure.js",
+  "main": "component.request.unsecure.js",
   "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/marchuanv/component.request.secure.git"
+    "url": "git+ssh://git@github.com/marchuanv/component.request.unsecure.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/marchuanv/component.request.secure/issues"
+    "url": "https://github.com/marchuanv/component.request.unsecure/issues"
   },
-  "homepage": "https://github.com/marchuanv/component.request.secure#readme",
+  "homepage": "https://github.com/marchuanv/component.request.unsecure#readme",
   "dependencies": {
     "logging": "git+https://github.com/marchuanv/logging.git",
     "component.request.deferred": "git+https://github.com/marchuanv/component.request.deferred.git"
