--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
   },
   "homepage": "https://github.com/marchuanv/component.request.unsecure#readme",
   "dependencies": {
-    "component.logging": "marchuanv/component.logging",
-    "component.request.deferred": "marchuanv/component.request.deferred"
+    "component": "marchuanv/component"
+  },
+  "component":{
+    "host":"localhost",
+    "port": 3000,
+    "channel": 3000,
+    "publishers": [
+      { "moduleName":"component.request.deferred" }
+    ]
   }
 }
